--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <!-- TODO test the functionality of below -->
+    <!-- <link rel="icon" href="<%= BASE_URL %>logo.ico" /> -->
+    <link rel="icon" href="<%= BASE_URL %>logo.svg" />
     <script
       src="https://kit.fontawesome.com/93ff3f75b7.js"
       crossorigin="anonymous"
