Fix bugs for user and personal recipe tab components, and add recipe ids and queries to url

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- TODO test the functionality of below -->
     <!-- <link rel="icon" href="<%= BASE_URL %>logo.ico" /> -->
-    <link rel="icon" href="<%= BASE_URL %>logo.svg" />
+    <!-- <link rel="icon" href="<%= BASE_URL %>logo.svg" /> -->
     <script
       src="https://kit.fontawesome.com/93ff3f75b7.js"
       crossorigin="anonymous"
