Fix more bugs for user and personal recipe tab components, as well as bugs for search spinners

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <!-- TODO test the functionality of below -->
     <!-- <link rel="icon" href="<%= BASE_URL %>logo.ico" /> -->
     <!-- <link rel="icon" href="<%= BASE_URL %>logo.svg" /> -->
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/93ff3f75b7.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
