Add browser tab titles and fix more css

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/93ff3f75b7.js"
       crossorigin="anonymous"
     ></script> -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Epicurist</title>
   </head>
   <body>
     <noscript>
