--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0, minimum-scale=1"
-    />
+    /> -->
     <!-- TODO test the functionality of below -->
     <!-- <link rel="icon" href="<%= BASE_URL %>logo.ico" /> -->
     <!-- <script
